# Ultimate-RAG-Using-LangChain-LangGraph-and-Langsmith

./: README.md  main.py  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
0-DataIngestParsing/data/databases/: company.db
1-VectorEmbeddingsAndDatabases/: embedding.ipynb  openaiembeddings.ipynb
2-Vector Stores/: 1-chromadb.ipynb  Datastaxdb+(1).ipynb  PineConeIndex.ipynb
2-Vector Stores/chroma_db/: chroma.sqlite3
3-AdvancedChunking/: 1-semanticchunking.ipynb
